# hyprmenu-rs

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
src/: app.rs  config.rs  main.rs  styling.rs  ui.rs
