[package]
name = "quickmenu"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.9", package = "gtk4", features = ["v4_12"] }
gdk = { version = "0.9", package = "gdk4" }
gio = "0.20"
glib = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
